src/task/cluster/snapshots/genin__task__cluster__test__cluster_v2_upgrade.snap
---
source: src/task/cluster/test.rs
expression: "String::from_utf8(strip_ansi_escapes::strip(upgraded.to_string()).unwrap()).unwrap()"
---
+-------------+-------------+
|          cluster          |
+-------------+-------------+
|       datacenter-1        |
+-------------+-------------+
|  server-1   |  server-2   |
+-------------+-------------+
|  router-1   | storage-1-1 |
|  8081/3031  | 8081/3031   |
+-------------+-------------+
| storage-1-2 | storage-2-1 |
| 8082/3032   | 8082/3032   |
+-------------+-------------+
| storage-2-2 |  api-1      |
| 8083/3033   |  8083/3033  |
+-------------+-------------+
|  router-2   |  router-3   |
|  8084/3034  |  8084/3034  |
+-------------+-------------+
|  router-4   |             |
|  8085/3035  |             |
+-------------+-------------+
| stateboard  |             |
+-------------+-------------+
