src/task/cluster/snapshots/genin__task__cluster__test__mallformed_content_err.snap
---
source: src/task/cluster/test.rs
expression: result
---
Err(while parsing a block mapping, did not find expected key at line 6 column 5(Err(while parsing a block mapping, did not find expected key at line 6 column 5)))
