src/task/cluster/snapshots/genin__task__cluster__test__missing_host_fields.snap
---
source: src/task/cluster/test.rs
expression: uncolorize(result)
---
Err(Invalid cluster configuration(Ok(
---
topology: "Missing field 'topology'"
hosts:
  - name: server-1
    config: "Expected type Dict got List"
  - name: "Missing field 'name'"
    config: 
      distance: 1000
    hosts: 
      - name: server-10
      - name: server-11
vars: "Expected type Dict got Null"
)))
