src/task/cluster/snapshots/genin__task__cluster__test__missing_main_fields_err.snap
---
source: src/task/cluster/test.rs
expression: uncolorize(result)
---
Err(Invalid cluster configuration(Ok(
---
topology: "Missing field 'topology'"
hosts: "Missing field 'hosts'"
vars: "Expected type Dict got Null"
)))
